# Brawlstars

./: .tmuxp.yaml  powerleague.md
api/: .env  config.yaml  pyproject.toml
api/.vim/: coc-settings.json
api/my_brawlstars/: __init__.py  client.py  config.py  main.py  settings.py
docs/archive/: powerleague.md
scripts/: crop.zsh  resize.zsh
